[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/minimal5x7.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/sprites/ui/menu/tile654.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/ui/menu/tile649.png" type="Texture" id=3]
[ext_resource path="res://assets/tetra_theme.tres" type="Theme" id=4]
[ext_resource path="res://assets/scenes/ui/focus_button.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/scenes/ui/slider_control.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/scripts/ui/options_menu.gd" type="Script" id=7]
[ext_resource path="res://assets/sprites/ui/menu/arrow_right.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/ui/menu/arrow_left.png" type="Texture" id=9]

[sub_resource type="TileSet" id=1]
0/name = "tile649.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "tile654.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 1 )

[node name="Options" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -480.0
margin_top = -272.5
margin_right = 480.0
margin_bottom = 272.5
theme = ExtResource( 4 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 4
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( 0, 1, 0, 1, -1073741824, 0, 2, -1073741824, 0, 3, -1073741824, 0, 4, -1073741824, 0, 5, -1073741824, 0, 6, -1073741824, 0, 7, -1073741824, 0, 8, -1073741824, 0, 9, -1073741824, 0, 10, -1073741824, 0, 11, -1073741824, 0, 12, -1073741824, 0, 13, -1073741824, 0, 14, -1073741824, 0, 15, -1073741824, 0, 16, -1073741824, 0, 17, -1073741824, 0, 18, -1073741824, 0, 19, -1073741824, 0, 20, -1073741824, 0, 21, -1073741824, 0, 22, -1073741824, 0, 23, -1073741824, 0, 24, -1073741824, 0, 25, -1073741824, 0, 26, -1073741824, 0, 27, -1073741824, 0, 28, -1073741824, 0, 29, -1073741824, 0, 30, -1073741824, 0, 31, -1073741824, 0, 32, -1073741824, 0, 33, -1073741824, 0, 34, -1073741824, 0, 35, -1073741824, 0, 36, -1073741824, 0, 37, -1073741824, 0, 38, -1073741824, 0, 39, -1073741824, 0, 40, -1073741824, 0, 41, -1073741824, 0, 42, -1073741824, 0, 43, -1073741824, 0, 44, -1073741824, 0, 45, -1073741824, 0, 46, -1073741824, 0, 47, -1073741824, 0, 48, -1073741824, 0, 49, -1073741824, 0, 50, -1073741824, 0, 51, -1073741824, 0, 52, -1073741824, 0, 53, -1073741824, 0, 54, -1073741824, 0, 55, -1073741824, 0, 56, -1073741824, 0, 57, -1073741824, 0, 58, -1073741824, 0, 59, -1610612735, 0, 65536, 0, 0, 65595, 0, 0, 131072, 0, 0, 131131, 0, 0, 196608, 0, 0, 196667, 0, 0, 262144, 0, 0, 262203, 0, 0, 327680, 0, 0, 327739, 0, 0, 393216, 0, 0, 393275, 0, 0, 458752, 0, 0, 458811, 0, 0, 524288, 0, 0, 524347, 0, 0, 589824, 0, 0, 589883, 0, 0, 655360, 0, 0, 655419, 0, 0, 720896, 0, 0, 720955, 0, 0, 786432, 0, 0, 786491, 0, 0, 851968, 0, 0, 852027, 0, 0, 917504, 0, 0, 917563, 0, 0, 983040, 0, 0, 983099, 0, 0, 1048576, 0, 0, 1048635, 0, 0, 1114112, 0, 0, 1114171, 0, 0, 1179648, 0, 0, 1179707, 0, 0, 1245184, 0, 0, 1245243, 0, 0, 1310720, 0, 0, 1310779, 0, 0, 1376256, 0, 0, 1376315, 0, 0, 1441792, 0, 0, 1441851, 0, 0, 1507328, 0, 0, 1507387, 0, 0, 1572864, 0, 0, 1572923, 0, 0, 1638400, 0, 0, 1638459, 0, 0, 1703936, 0, 0, 1703995, 0, 0, 1769472, 0, 0, 1769531, 0, 0, 1835008, 0, 0, 1835067, 0, 0, 1900544, 0, 0, 1900603, 0, 0, 1966080, 0, 0, 1966139, 0, 0, 2031616, 0, 0, 2031675, 0, 0, 2097152, 0, 0, 2097211, 0, 0, 2162688, -1073741823, 0, 2162689, -1610612736, 0, 2162690, -1610612736, 0, 2162691, -1610612736, 0, 2162692, -1610612736, 0, 2162693, -1610612736, 0, 2162694, -1610612736, 0, 2162695, -1610612736, 0, 2162696, -1610612736, 0, 2162697, -1610612736, 0, 2162698, -1610612736, 0, 2162699, -1610612736, 0, 2162700, -1610612736, 0, 2162701, -1610612736, 0, 2162702, -1610612736, 0, 2162703, -1610612736, 0, 2162704, -1610612736, 0, 2162705, -1610612736, 0, 2162706, -1610612736, 0, 2162707, -1610612736, 0, 2162708, -1610612736, 0, 2162709, -1610612736, 0, 2162710, -1610612736, 0, 2162711, -1610612736, 0, 2162712, -1610612736, 0, 2162713, -1610612736, 0, 2162714, -1610612736, 0, 2162715, -1610612736, 0, 2162716, -1610612736, 0, 2162717, -1610612736, 0, 2162718, -1610612736, 0, 2162719, -1610612736, 0, 2162720, -1610612736, 0, 2162721, -1610612736, 0, 2162722, -1610612736, 0, 2162723, -1610612736, 0, 2162724, -1610612736, 0, 2162725, -1610612736, 0, 2162726, -1610612736, 0, 2162727, -1610612736, 0, 2162728, -1610612736, 0, 2162729, -1610612736, 0, 2162730, -1610612736, 0, 2162731, -1610612736, 0, 2162732, -1610612736, 0, 2162733, -1610612736, 0, 2162734, -1610612736, 0, 2162735, -1610612736, 0, 2162736, -1610612736, 0, 2162737, -1610612736, 0, 2162738, -1610612736, 0, 2162739, -1610612736, 0, 2162740, -1610612736, 0, 2162741, -1610612736, 0, 2162742, -1610612736, 0, 2162743, -1610612736, 0, 2162744, -1610612736, 0, 2162745, -1610612736, 0, 2162746, -1610612736, 0, 2162747, 1610612737, 0 )

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -93.0
margin_top = -208.5
margin_right = 93.0
margin_bottom = -178.5
custom_fonts/font = SubResource( 2 )
text = "Options"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -332.0
margin_top = -98.6784
margin_right = 332.0
margin_bottom = 92.3216
custom_constants/vseparation = 14
custom_constants/hseparation = 42
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelFullscreen" type="Label" parent="GridContainer"]
margin_right = 172.0
margin_bottom = 25.0
text = "Toggle Fullscreen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckControl" type="Control" parent="GridContainer"]
margin_left = 214.0
margin_right = 642.0
margin_bottom = 25.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="GridContainer/CheckControl"]
margin_top = -20.0
margin_right = 24.0
margin_bottom = 13.0
rect_scale = Vector2( 2, 2 )
focus_neighbour_right = NodePath("../../WindowSizeControl/LineEditHeight")
focus_neighbour_bottom = NodePath("../../WindowSizeControl/LineEditWidth")
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelWindowSize" type="Label" parent="GridContainer"]
margin_top = 44.0
margin_right = 172.0
margin_bottom = 69.0
text = "Window Size"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindowSizeControl" type="HBoxContainer" parent="GridContainer"]
margin_left = 214.0
margin_top = 39.0
margin_right = 642.0
margin_bottom = 74.0
custom_constants/separation = 14

[node name="LineEditWidth" type="LineEdit" parent="GridContainer/WindowSizeControl"]
margin_right = 194.0
margin_bottom = 35.0
focus_neighbour_right = NodePath("../LineEditHeight")
focus_neighbour_bottom = NodePath("../../SliderMasterVolume/Slider")
size_flags_horizontal = 3
text = "1280"
align = 1
max_length = 4
context_menu_enabled = false
placeholder_text = "Width"

[node name="LabelX" type="Label" parent="GridContainer/WindowSizeControl"]
margin_left = 208.0
margin_top = 5.0
margin_right = 220.0
margin_bottom = 30.0
text = "x"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEditHeight" type="LineEdit" parent="GridContainer/WindowSizeControl"]
margin_left = 234.0
margin_right = 428.0
margin_bottom = 35.0
focus_neighbour_left = NodePath("../LineEditWidth")
focus_neighbour_top = NodePath("../../CheckControl/CheckBox")
focus_neighbour_bottom = NodePath("../../SliderMasterVolume/Slider")
size_flags_horizontal = 3
text = "720"
align = 1
max_length = 4
context_menu_enabled = false
virtual_keyboard_enabled = false
placeholder_text = "Height"

[node name="LabelMasterVolume" type="Label" parent="GridContainer"]
margin_top = 88.0
margin_right = 172.0
margin_bottom = 113.0
text = "Master Volume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SliderMasterVolume" parent="GridContainer" instance=ExtResource( 6 )]
margin_left = 214.0
margin_top = 88.0
margin_right = 642.0
margin_bottom = 113.0
rect_min_size = Vector2( 428, 0 )
suffix = "%"

[node name="Slider" parent="GridContainer/SliderMasterVolume" index="1"]
focus_neighbour_bottom = NodePath("../../SliderMusicVolume/Slider")

[node name="LabelMusicVolume" type="Label" parent="GridContainer"]
margin_top = 127.0
margin_right = 172.0
margin_bottom = 152.0
text = "Music Volume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SliderMusicVolume" parent="GridContainer" instance=ExtResource( 6 )]
margin_left = 214.0
margin_top = 127.0
margin_right = 642.0
margin_bottom = 152.0
suffix = "%"

[node name="Slider" parent="GridContainer/SliderMusicVolume" index="1"]
focus_neighbour_bottom = NodePath("../../SliderSFXVolume/Slider")

[node name="LabelSFXVolume" type="Label" parent="GridContainer"]
margin_top = 166.0
margin_right = 172.0
margin_bottom = 191.0
text = "SFX Volume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SliderSFXVolume" parent="GridContainer" instance=ExtResource( 6 )]
margin_left = 214.0
margin_top = 166.0
margin_right = 642.0
margin_bottom = 191.0
suffix = "%"

[node name="Slider" parent="GridContainer/SliderSFXVolume" index="1"]
focus_neighbour_bottom = NodePath("../../../VBoxContainer/ButtonReset")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -94.0
margin_top = -117.0
margin_right = 94.0
margin_bottom = -45.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonReset" parent="VBoxContainer" instance=ExtResource( 5 )]
margin_right = 188.0
focus_neighbour_bottom = NodePath("../ButtonClose")
text = "Reset to Defaults"
focus_path = NodePath("../../Focus")

[node name="ButtonClose" parent="VBoxContainer" instance=ExtResource( 5 )]
margin_top = 35.0
margin_right = 188.0
margin_bottom = 66.0
text = "Save and Exit"
focus_path = NodePath("../../Focus")

[node name="Focus" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1.5
margin_top = 207.811
margin_right = -1.5
margin_bottom = 207.811
__meta__ = {
"_edit_use_anchors_": false
}

[node name="arrow_left" type="Sprite" parent="Focus"]
position = Vector2( 114, 0 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 9 )

[node name="arrow_right" type="Sprite" parent="Focus"]
position = Vector2( -114, 0 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 8 )
[connection signal="focus_entered" from="GridContainer/CheckControl/CheckBox" to="." method="_on_fullscreen_focus_entered"]
[connection signal="focus_exited" from="GridContainer/CheckControl/CheckBox" to="." method="_on_fullscreen_focus_exited"]
[connection signal="mouse_entered" from="GridContainer/CheckControl/CheckBox" to="." method="_on_fullscreen_focus_entered"]
[connection signal="mouse_exited" from="GridContainer/CheckControl/CheckBox" to="." method="_on_fullscreen_focus_exited"]
[connection signal="toggled" from="GridContainer/CheckControl/CheckBox" to="." method="_on_fullscreen_toggled"]
[connection signal="value_changed" from="GridContainer/SliderMasterVolume/Slider" to="." method="_on_master_volume_changed"]
[connection signal="value_changed" from="GridContainer/SliderMusicVolume/Slider" to="." method="_on_music_volume_changed"]
[connection signal="value_changed" from="GridContainer/SliderSFXVolume/Slider" to="." method="_on_sfx_volume_changed"]
[connection signal="focus_entered" from="VBoxContainer/ButtonReset" to="." method="_on_button_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/ButtonReset" to="." method="_on_button_focus_exited"]
[connection signal="pressed" from="VBoxContainer/ButtonReset" to="." method="_on_reset_pressed"]
[connection signal="focus_entered" from="VBoxContainer/ButtonClose" to="." method="_on_button_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/ButtonClose" to="." method="_on_button_focus_exited"]
[connection signal="pressed" from="VBoxContainer/ButtonClose" to="." method="save_and_exit"]

[editable path="GridContainer/SliderMasterVolume"]

[editable path="GridContainer/SliderMusicVolume"]

[editable path="GridContainer/SliderSFXVolume"]
